--- a/RA2.tex
+++ b/RA2.tex
@@ -17,7 +17,7 @@ After the description of the event selection (Sec.~\ref{sec:RA2_sel}), it is dis
 \subsection{Data Samples}
 \label{subsec:RA2_samples_trigger}
 The analysis is based on \pp collision data recorded with the CMS detector at a centre of mass energy of $\sqrt{s} = 8$\tev. This corresponds to an integrated luminosity of 19.5\fbinv for all sub-detectors fully functional. \\
-In addition, it is made use of several simulated samples describing SM background processes. These are especially employed in the validation of the background estimation methods described in Sec.~\ref{sec:RA2_Non-QCD} and~\ref{subsec:RA2_QCD}. The standard model processes for \ttbar, \WJets, \ZJets, $\gamma + \mathrm{{jets}}$ and QCD multijet events are generated with the \madgraph~\cite{Alwall:2007st} generator at leading order and are interfaced with the parton-shower model in \pythia 6.4.24~\cite{Sjostrand:2006za}. While \ttbar events are generated with up to three additional jets, other background samples contain up to four additional jets. The samples are scaled to cross-section predictions at next-to-leading order or next-to-next-to-leading order, when available~\cite{Kidonakis:2010dk, Melnikov:2006kv}. The events are processed with the full detector simulation. 
+In addition, it is made use of several simulated samples describing SM background processes. These are especially employed in the validation of the background estimation methods described in Sec.~\ref{sec:RA2_Non-QCD} and~\ref{subsec:RA2_QCD}. The standard model processes for \ttbar, \WJets, \ZJets, $\gamma + \mathrm{{jets}}$ and QCD multijet events are generated with the \madgraph~\cite{Alwall:2014hca} generator at leading order and are interfaced with the parton-shower model in \pythia 6.4.24~\cite{Sjostrand:2006za}. While \ttbar events are generated with up to three additional jets, other background samples contain up to four additional jets. The samples are scaled to cross-section predictions at next-to-leading order or next-to-next-to-leading order, when available~\cite{Kidonakis:2010dk, Melnikov:2006kv}. The events are processed with the full detector simulation. 
 %\begin{table}[!t]
 %\fontsize{9 pt}{1.2 em}
 %\selectfont
@@ -47,7 +47,7 @@ In addition, it is made use of several simulated samples describing SM backgroun
 %\label{tab:ra2_samples}
 %\end{table}    
 \\
-Furthermore, SUSY signal samples are obtained from simulation. They are generated with \madgraph~\cite{Alwall:2007st} (with up to two additional partons), the CTEQ6L parton distribution functions~\cite{Pumplin:2002vw} and processed with the fast detector simulation. Cross sections are determined at NLO with a resummation of soft gluon emission at the accuracy of next-to-leading-log~\cite{Beenakker:1996ch, PhysRevLett.102.111802, PhysRevD.80.095004, Beenakker:2009ha, Beenakker:2011fu, Kramer:2012bx}. The cross section calculation as well as the generation of signal events for a certain type of sparticle is performed by effectively removing contributions from other sparticles by assuming their mass to be very large.
+Furthermore, SUSY signal samples are obtained from simulation. They are generated with \madgraph~\cite{Alwall:2014hca} (with up to two additional partons), the CTEQ6L parton distribution functions~\cite{Pumplin:2002vw} and processed with the fast detector simulation. Cross sections are determined at NLO with a resummation of soft gluon emission at the accuracy of next-to-leading-log~\cite{Beenakker:1996ch, PhysRevLett.102.111802, PhysRevD.80.095004, Beenakker:2009ha, Beenakker:2011fu, Kramer:2012bx}. The cross section calculation as well as the generation of signal events for a certain type of sparticle is performed by effectively removing contributions from other sparticles by assuming their mass to be very large.
 
 \subsection{Trigger}
 \label{subsec:RA2_trigger}
